plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'it.evodev'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ── SPRING BOOT CORE ──────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.security:spring-security-oauth2-authorization-server:1.4.3'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.security:spring-security-oauth2-jose'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // ── DATABASE ──────────────────────────────────────────
    runtimeOnly 'org.postgresql:postgresql'

    // ── AZURE ─────────────────────────────────────────────
    implementation 'com.azure.spring:spring-cloud-azure-starter-storage-blob'

    // ── LOMBOK ────────────────────────────────────────────
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ── Jackson 3.x ────────────────────────────────────────────
    // (richiesto da Spring Boot 4 / Hibernate 7 per il mapping JSONB)
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // ── SVILUPPO ──────────────────────────────────────────
    developmentOnly 'org.springframework.boot:spring-boot-devtools' 

    // ── TEST ──────────────────────────────────────────────
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom 'com.azure.spring:spring-cloud-azure-dependencies:5.24.0'
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

bootRun {
    jvmArgs = ['-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005']
}
